# Solar-Funding-Project

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements_dev.txt  setup.py
design/: Project-Plan_solar-Offset.md  SolarOffsetProject.md  project-planning_user-types-stories_features_architecture.md
solar_offset/: .env  __init__.py  data-dev.sql  db.py  schema.sql  util.py
solar_offset/static/: styles_base.css
solar_offset/static/css/: adminstyle.css  contact-style.css  donate.css  homestyle.css  householder.css  loginstyle.css  projectsstyle.css  registerstyle.css  staffstyle.css
solar_offset/static/js/: admin.js  donate.js  flashmessage.js  login.js  register.js  sorting.js  staff.js
solar_offset/templates/: base.html  contact-us.html  errorflashmessage.html  flashmessage.html  home.html  login.html  referal.html  register.html
solar_offset/templates/admin/: admin.html
solar_offset/templates/api/: donate.html
solar_offset/templates/auth-engine/: login.html  register-staff.html  register.html  suspended.html
solar_offset/templates/home/: home.html
solar_offset/templates/householder/: country_list.html  donate.html  home.html  householderdashboard.html  projects.html
solar_offset/utils/: carbon_offset_util.py  misc.py  statistics_util.py
solar_offset/views/: admin.py  api.py  auth.py  householder.py  staff.py
solar_offset/views/home/: home.py
tests/: conftest.py  data.sql  requirements.txt  test_db.py  test_factory.py  test_householder.py
tests/api/: test_api_donation.py
tests/householder/: test_householder_country_list.py
(+17 files in other folders)
